test/invalid/MultipleExtends/MultipleExtends.plume
/**
 * Multiple inheritance
 * @author 36994, César Santos
 */
class MultipleExtends extends Object extends Extender is
  method test : () -> Boolean is
    true